tests/ui/type_alias_rust.stderr
error: `extern "Rust"` alias must have the same name as the target type
 --> tests/ui/type_alias_rust.rs:5:14
  |
5 |         type Alias = crate::Type;
  |              ^^^^^
